Add missing i18n properties files. Closes #25

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8090
 #spring.banner.image.location=cat.jpg
 spring.banner.image.location=ahmed.jpg
+
+# Internationalization
+spring.messages.basename=messages/messages
