Update Profiles to use Spring Data JPA Services. Closes #48

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.banner.image.location=ahmed.jpg
 
 # Internationalization
 spring.messages.basename=messages/messages
+
+spring.profiles.active=springdatajpa
